Update to 1.1.0
- moved to com.github package and group id
- package repository is now jitpack
- updated source to java 14
- down-compiling to java 8 using jabel